k8s/vc-auth/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: vc-auth
   namespace: demos-dev
   labels:
      app: vc-auth
spec:
   serviceName: "vc-auth"
   replicas: 1
   selector:
      matchLabels:
         app: vc-auth
   template:
      metadata:
         labels:
            app: vc-auth
      spec:
         containers:
         -  name: vc-auth-sa-container
            image: io2060/2060-service-agent:dev
            imagePullPolicy: Always
            volumeMounts:
            - name: vc-auth-sa-pv-main
              mountPath: /root/.afj
            ports:
            -  containerPort: 8077
            -  containerPort: 8030
         -  name: controller
            image: io2060/vc-auth-2060:2060
            imagePullPolicy: Always
            command: ["/bin/bash", "-c"]
            args: 
              - |
                echo "Waiting for MongoDB to be ready..."
                until python -c "import pymongo; pymongo.MongoClient('mongodb://localhost:27017').server_info()"; do
                  sleep 1
                done
                echo "MongoDB is ready"
                if [ "$DEBUGGER" == "true" ]; then
                  echo 'Starting in debug mode...'
                  pip install debugpy -t /tmp && \
                  python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 -m uvicorn api.main:app --reload --host 0.0.0.0 --port 5000;
                else
                  echo 'Starting in production mode...'
                  uvicorn api.main:app --reload --host 0.0.0.0 --port 5000;
                fi
            ports:
            -  containerPort: 5000
            -  containerPort: 5678
         -  name: controller-db
            image: mongo:6.0
            imagePullPolicy: Always
            ports:
            - containerPort: 27017
            volumeMounts:
              - name: vc-auth-mongo-pv-main
                mountPath: /data/db
              - name: mongo-init-script
                mountPath: /docker-entrypoint-initdb.d/
         volumes:
         - name: vc-auth-mongo-pv-main
         - name: "mongo-init-script"
           configMap:
             name: mongo-init-config

   volumeClaimTemplates: 
   - metadata:
       name: vc-auth-sa-pv-main
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: vc-auth-mongo-pv-main
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
