k8s/vc-auth/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vc-auth
  namespace: demos-dev
  labels:
    app: vc-auth
spec:
  ports:
    - name: admin
      protocol: TCP
      port: 8077
      targetPort: 8077
    - name: http
      protocol: TCP
      port: 8030
      targetPort: 8030
    - name: host
      protocol: TCP
      port: 5000
      targetPort: 5000
    - name: listen
      protocol: TCP
      port: 5678
      targetPort: 5678
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: vc-auth
